# evil-winrm-py

./: README.md  pyproject.toml
docs/: install.md  usage.md
evil_winrm_py/: evil_winrm_py.py
evil_winrm_py/pypsrp_ewp/: encryption.py  impacket_kerberos.py  wsman.py
